# winapi-debug

./: .appveyor.yml  .clang-format  .clang-tidy  .dockerignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  appveyor.yml  common.cmake
.appveyor/: build.ps1
.github/workflows/: ci.yml
.travis/: Dockerfile  docker-compose.yml
include/pdb/: address.hpp  all.hpp  call_stack.hpp  dbghelp.hpp  error.hpp  handle.hpp  module.hpp  process.hpp  repo.hpp  symbol.hpp  workarounds.hpp
include/pdb/utils/: file.hpp
include/winapi/: debug.hpp
include/winapi/debug/: address.hpp  call_stack.hpp  dbghelp.hpp  module.hpp  post_mortem.hpp  repo.hpp  symbol.hpp
src/: call_stack.cpp  dbghelp.cpp  error.cpp  module.cpp  post_mortem.cpp  process.cpp  repo.cpp  symbol.cpp
src/utils/: file.cpp
test/: CMakeLists.txt  call_stack.cpp  foobar.cpp  lab_rat.cpp  symbols.cpp  test_lib.cpp  test_lib.hpp  test_lib_api.hpp
test/unit_tests/: CMakeLists.txt  call_stack.cpp  dbghelp.cpp  dbghelp.hpp  error.cpp  fixtures.hpp  main.cpp  paths.hpp  utils.hpp
utils/: CMakeLists.txt  addr2name.cpp  command_line.hpp  enum_symbols.cpp  name2addr.cpp  pdb_descr.hpp
