find_package(Boost REQUIRED COMPONENTS filesystem program_options)

function(add_util name src)
    add_executable("${name}" ${src})
    target_link_libraries("${name}" PRIVATE pdb_repo)
    target_link_libraries("${name}" PRIVATE Boost::filesystem Boost::nowide Boost::program_options)
    install(TARGETS "${name}" RUNTIME DESTINATION bin)
    if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
        install(FILES "$<TARGET_PDB_FILE:${name}>" DESTINATION bin OPTIONAL)
    endif()
endfunction()

add_util(enum_symbols enum_symbols.cpp command_line.hpp pdb_descr.hpp)
add_util(name2addr name2addr.cpp)
add_util(addr2name addr2name.cpp command_line.hpp pdb_descr.hpp)
